--- a/session-manager/src/main/AndroidManifest.xml
+++ b/session-manager/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="hundredthirtythree.sessionmanager"
 >
 
-    <application android:allowBackup="true"
+    <application android:allowBackup="false"
                  android:label="@string/app_name"
                  android:supportsRtl="true"
     >
