--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: android
+sudo: false
+
 android:
   components:
     # Uncomment the lines below if you want to
@@ -11,3 +13,8 @@ android:
 
     # The SDK version used to compile your project
     - android-25
+  before_script:
+    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
