--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,14 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-22
-    - sys-img-armeabi-v7a-android-17
+    - sys-img-armeabi-v7a-android-25
   licenses:
       - 'android-sdk-preview-license-52d11cd2'
       - 'android-sdk-license-.+'
       - 'google-gdk-license-.+'
   # Emulator Management: Create, Start and Wait
   before_script:
-    - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-    - emulator -avd test -no-audio -no-window &
+    - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+    - emulator -avd test -no-audio -no-window -gpu off &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
