--- a/session-manager/src/main/AndroidManifest.xml
+++ b/session-manager/src/main/AndroidManifest.xml
@@ -1,13 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-          package="hundredthirtythree.sessionmanager"
->
-
-    <application android:allowBackup="false"
-                 android:label="@string/app_name"
-                 android:supportsRtl="true"
-    >
-
-    </application>
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="hundredthirtythree.sessionmanager">
 
 </manifest>
