--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
-        google()
+        maven { url "https://maven.google.com" }
         maven { url "https://jitpack.io" }
     }
 }
