--- a/session-manager/build.gradle
+++ b/session-manager/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group = 'com.github.MFlisar'
+group = 'com.github.Chingiz'
 
 android {
     compileSdkVersion 25
